Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTI1553.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long MSGADDR;
typedef unsigned long LISTADDR;
typedef int BOOL;
typedef void * HCORE;
typedef int HCORE;
typedef int ERRVAL;
typedef int SCHNDX;
BTI1553API ULONG __stdcall BTI1553_CmdAddr(SCHNDX index,INT channum,HCORE handleval);
BTI1553API ULONG __stdcall BTI1553_CmdAlloc(INT count,HCORE handleval);
BTI1553API ULONG __stdcall BTI1553_CmdAllocEx(ULONG configval,INT count,HCORE handleval);
BTI1553API ULONG __stdcall BTI1553_CmdBaseRd(INT channum,HCORE handleval);
BTI1553API VOID __stdcall BTI1553_CmdBaseWr(ULONG addrval,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_CmdClear(INT channum,HCORE handleval);
BTI1553API USHORT __stdcall BTI1553_CmdCountRd(INT channum,HCORE handleval);
BTI1553API VOID __stdcall BTI1553_CmdCountWr(USHORT countval,INT channum,HCORE handleval);
BTI1553API USHORT __stdcall BTI1553_CmdCtrlRd(SCHNDX index,INT channum,HCORE handleval);
BTI1553API VOID __stdcall BTI1553_CmdCtrlWr(USHORT ctrlval,SCHNDX index,INT channum,HCORE handleval);
BTI1553API USHORT __stdcall BTI1553_CmdCurrRd(INT channum,HCORE handleval);
BTI1553API VOID __stdcall BTI1553_CmdCurrWr(USHORT addrval,INT channum,HCORE handleval);
BTI1553API VOID __stdcall BTI1553_CmdInit(USHORT opcode,LPUSHORT block);
BTI1553API SCHNDX __stdcall BTI1553_CmdInsert(LPUSHORT block,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_CmdRd(LPUSHORT block,ULONG addrval,HCORE handleval);
BTI1553API VOID __stdcall BTI1553_CmdRestart(INT channum,HCORE handleval);
BTI1553API VOID __stdcall BTI1553_CmdStackClr(INT channum,HCORE handleval);
BTI1553API USHORT __stdcall BTI1553_CmdStartRd(INT channum,HCORE handleval);
BTI1553API VOID __stdcall BTI1553_CmdStartWr(USHORT addrval,INT channum,HCORE handleval);
BTI1553API INT __stdcall BTI1553_CmdTotalRd(INT channum,HCORE handleval);
BTI1553API VOID __stdcall BTI1553_CmdTotalWr(INT countval,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_CmdWr(LPUSHORT block,ULONG addrval,HCORE handleval);
BTI1553API ULONG __stdcall BTI1553_DescAddr(BOOL mcflag,INT taval,BOOL trflag,INT saval,INT channum,HCORE handleval);
BTI1553API ULONG __stdcall BTI1553_DescAlloc(HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_DescConfig(ULONG configval,BOOL mcflag,INT taval,BOOL trflag,INT saval,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_DescConfigAll(ULONG configval,INT taval,INT channum,HCORE handleval);
BTI1553API USHORT __stdcall BTI1553_DescOptRd(BOOL mcflag,INT taval,BOOL trflag,INT saval,INT channum,HCORE handleval);
BTI1553API VOID __stdcall BTI1553_DescOptWr(USHORT descopt,BOOL mcflag,INT taval,BOOL trflag,INT saval,INT channum,HCORE handleval);
BTI1553API MSGADDR __stdcall BTI1553_DescPtrRd(BOOL mcflag,INT taval,BOOL trflag,INT saval,INT channum,HCORE handleval);
BTI1553API ULONG __stdcall BTI1553_DescPtrWr(MSGADDR msgaddr,BOOL mcflag,INT taval,BOOL trflag,INT saval,INT channum,HCORE handleval);
BTI1553API ULONG __stdcall BTI1553_DescRd(BOOL mcflag,INT taval,BOOL trflag,INT saval,LPUSHORT desc,INT channum,HCORE handleval);
BTI1553API ULONG __stdcall BTI1553_DescWr(BOOL mcflag,INT taval,BOOL trflag,INT saval,LPUSHORT desc,INT channum,HCORE handleval);
BTI1553API INT __stdcall BTI1553_DllUsageCount(VOID);
BTI1553API BOOL __stdcall BTI1553_ErrorIsTaggedBC(MSGADDR msgaddr,INT channum,HCORE handleval);
BTI1553API BOOL __stdcall BTI1553_ErrorIsTaggedRT(BOOL mcflag,INT taval,BOOL trflag,INT saval,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_ErrorResponse(USHORT responseval,INT channum,HCORE handleval);
BTI1553API VOID __stdcall BTI1553_ErrorSync(BOOL value,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_ErrorTimeout(USHORT timeoutval,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_HostComm(LPVOID lpParam,HCORE handleval);
BTI1553API BOOL __stdcall BTI1553_IsChan(INT channum,HCORE handleval);
BTI1553API MSGADDR __stdcall BTI1553_ListAddr(INT index,LISTADDR listaddr,HCORE handleval);
BTI1553API MSGADDR __stdcall BTI1553_ListAddrEx(INT index,LISTADDR listaddr,LPUSHORT header,HCORE handleval);
BTI1553API MSGADDR __stdcall BTI1553_ListBlockRdEx(LPUSHORT buf,INT index,LISTADDR listaddr,HCORE handleval);
BTI1553API MSGADDR __stdcall BTI1553_ListBlockWrEx(LPUSHORT buf,INT index,LISTADDR listaddr,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_ListClear(LISTADDR listaddr,HCORE handleval);
BTI1553API LISTADDR __stdcall BTI1553_ListConfig(ULONG configval,INT count,USHORT skipval,HCORE handleval);