Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTI1553NET.CS

            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_CmdAddr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_CmdAddr(Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_CmdAlloc@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_CmdAlloc(Int32 count, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_CmdAllocEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_CmdAllocEx(UInt32 configval, Int32 count, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_CmdBaseRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_CmdBaseRd(Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_CmdBaseWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI1553_CmdBaseWr(UInt32 addrval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_CmdClear@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_CmdClear(Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_CmdCountRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI1553_CmdCountRd(Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_CmdCountWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI1553_CmdCountWr(UInt16 countval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_CmdCtrlRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI1553_CmdCtrlRd(Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_CmdCtrlWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI1553_CmdCtrlWr(UInt16 ctrlval, Int32 index, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_CmdCurrRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI1553_CmdCurrRd(Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_CmdCurrWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI1553_CmdCurrWr(UInt16 addrval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_CmdInit@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI1553_CmdInit(UInt16 opcode, UInt16[] block);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_CmdInsert@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_CmdInsert(UInt16[] block, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_CmdRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_CmdRd(UInt16[] block, UInt32 addrval, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_CmdRestart@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI1553_CmdRestart(Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_CmdStackClr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI1553_CmdStackClr(Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_CmdStartRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI1553_CmdStartRd(Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_CmdStartWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI1553_CmdStartWr(UInt16 addrval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_CmdTotalRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_CmdTotalRd(Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_CmdTotalWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI1553_CmdTotalWr(Int32 countval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_CmdWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_CmdWr(UInt16[] block, UInt32 addrval, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_DescAddr@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_DescAddr(Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_DescAlloc@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_DescAlloc(IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_DescConfig@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_DescConfig(UInt32 configval, Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_DescConfigAll@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_DescConfigAll(UInt32 configval, Int32 taval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_DescOptRd@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI1553_DescOptRd(Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_DescOptWr@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI1553_DescOptWr(UInt16 descopt, Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_DescPtrRd@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_DescPtrRd(Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_DescPtrWr@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_DescPtrWr(UInt32 msgaddr, Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_DescRd@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_DescRd(Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt16[] desc, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_DescWr@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_DescWr(Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt16[] desc, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_DllUsageCount@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_DllUsageCount();
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ErrorIsTaggedBC@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ErrorIsTaggedBC(UInt32 msgaddr, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ErrorIsTaggedRT@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ErrorIsTaggedRT(Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ErrorResponse@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ErrorResponse(UInt16 responseval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ErrorSync@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI1553_ErrorSync(Int32 value, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ErrorTimeout@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ErrorTimeout(UInt16 timeoutval, Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_HostComm@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_HostComm(IntPtr lpparam, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_IsChan@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_IsChan(Int32 channum, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ListAddr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_ListAddr(Int32 index, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ListAddrEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_ListAddrEx(Int32 index, UInt32 listaddr, ref UInt16 header, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ListBlockRdEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_ListBlockRdEx(UInt16[] buf, Int32 index, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ListBlockWrEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_ListBlockWrEx(UInt16[] buf, Int32 index, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ListClear@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI1553_ListClear(UInt32 listaddr, IntPtr handleval);
            [DllImport("BTI1553.DLL", EntryPoint = "_BTI1553_ListConfig@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI1553_ListConfig(UInt32 configval, Int32 count, UInt16 skipval, IntPtr handleval);
